--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/stale@v5
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'Stale issue message'
-        stale-pr-message: 'Stale pull request message'
+        stale-issue-message: 'Thank you for your contributions to our project'
+        stale-pr-message: 'We appreciate your contributions to our project'
         stale-issue-label: 'no-issue-activity'
         stale-pr-label: 'no-pr-activity'
